; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/crypto/extr_corecrypto_sha1.c_DiToSHA1.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/crypto/extr_corecrypto_sha1.c_DiToSHA1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccdigest_info = type { i32, i32 }
%struct.ccdigest_ctx = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__, %struct.TYPE_6__ }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ccdigest_info*, %struct.ccdigest_ctx*, %struct.TYPE_8__*)* @DiToSHA1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DiToSHA1(%struct.ccdigest_info* %0, %struct.ccdigest_ctx* %1, %struct.TYPE_8__* %2) #0 {
  %4 = alloca %struct.ccdigest_info*, align 8
  %5 = alloca %struct.ccdigest_ctx*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  store %struct.ccdigest_info* %0, %struct.ccdigest_info** %4, align 8
  store %struct.ccdigest_ctx* %1, %struct.ccdigest_ctx** %5, align 8
  store %struct.TYPE_8__* %2, %struct.TYPE_8__** %6, align 8
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %8 = load %struct.ccdigest_info*, %struct.ccdigest_info** %4, align 8
  %9 = load %struct.ccdigest_ctx*, %struct.ccdigest_ctx** %5, align 8
  %10 = call i32 @ccdigest_nbits(%struct.ccdigest_info* %8, %struct.ccdigest_ctx* %9)
  %11 = sdiv i32 %10, 8
  %12 = sext i32 %11 to i64
  %13 = load %struct.ccdigest_info*, %struct.ccdigest_info** %4, align 8
  %14 = load %struct.ccdigest_ctx*, %struct.ccdigest_ctx** %5, align 8
  %15 = call i64 @ccdigest_num(%struct.ccdigest_info* %13, %struct.ccdigest_ctx* %14)
  %16 = add nsw i64 %12, %15
  %17 = call i32 @setCount(%struct.TYPE_8__* %7, i64 %16)
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 1
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.ccdigest_info*, %struct.ccdigest_info** %4, align 8
  %23 = load %struct.ccdigest_ctx*, %struct.ccdigest_ctx** %5, align 8
  %24 = call i32 @ccdigest_data(%struct.ccdigest_info* %22, %struct.ccdigest_ctx* %23)
  %25 = load %struct.ccdigest_info*, %struct.ccdigest_info** %4, align 8
  %26 = getelementptr inbounds %struct.ccdigest_info, %struct.ccdigest_info* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @memcpy(i32 %21, i32 %24, i32 %27)
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.ccdigest_info*, %struct.ccdigest_info** %4, align 8
  %34 = load %struct.ccdigest_ctx*, %struct.ccdigest_ctx** %5, align 8
  %35 = call i32 @ccdigest_state_ccn(%struct.ccdigest_info* %33, %struct.ccdigest_ctx* %34)
  %36 = load %struct.ccdigest_info*, %struct.ccdigest_info** %4, align 8
  %37 = getelementptr inbounds %struct.ccdigest_info, %struct.ccdigest_info* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @memcpy(i32 %32, i32 %35, i32 %38)
  ret void
}

declare dso_local i32 @setCount(%struct.TYPE_8__*, i64) #1

declare dso_local i32 @ccdigest_nbits(%struct.ccdigest_info*, %struct.ccdigest_ctx*) #1

declare dso_local i64 @ccdigest_num(%struct.ccdigest_info*, %struct.ccdigest_ctx*) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @ccdigest_data(%struct.ccdigest_info*, %struct.ccdigest_ctx*) #1

declare dso_local i32 @ccdigest_state_ccn(%struct.ccdigest_info*, %struct.ccdigest_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
